[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/direction-up.png" type="Texture" id=1]
[ext_resource path="res://assets/direction-right.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/pause.png" type="Texture" id=5]
[ext_resource path="res://assets/retry.png" type="Texture" id=6]

[node name="Controller" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="TextureButton" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 6 )

[node name="PauseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button1" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -128.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vertical" type="TextureRect" parent="button1"]
modulate = Color( 0, 0, 1, 1 )
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="horizontal" type="TextureRect" parent="button1"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="button1"]
margin_left = 264.0
margin_top = 48.0
margin_right = 280.0
margin_bottom = 79.0
text = "Z"

[node name="button2" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -302.0
margin_top = -128.0
margin_right = 40.0
margin_bottom = -128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="button2"]
margin_top = 48.0
margin_right = 18.0
margin_bottom = 79.0
text = "X"

[node name="vertical" type="TextureRect" parent="button2"]
modulate = Color( 0, 0, 1, 1 )
margin_left = 22.0
margin_right = 150.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="horizontal" type="TextureRect" parent="button2"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 154.0
margin_right = 282.0
margin_bottom = 128.0
texture = ExtResource( 2 )
[connection signal="pressed" from="ReplayButton" to="." method="_replay_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_pause_pressed"]
